Mengubah nama Meddent menjadi Pharmadent

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Meddent</title>
+    <title>Pharmadent</title>
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -46,8 +46,8 @@
     <!-- Jumotron -->
     <section class="jumbotron text-center">
       <img src="img/Pratama.jpg" alt="Pratama Adi Ciptawan" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Pratama Adi Ciptawan</h1>
-      <p class="lead">Design Grafis | Creative</p>
+      <h1 class="display-4">Pharmadent Store</h1>
+      <p class="lead">Dental Supply | Creative</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
