mengubah gambar logo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Jumotron -->
     <section class="jumbotron text-center">
-      <img src="img/Pratama.jpg" alt="Pratama Adi Ciptawan" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/Pharmadent Store.jpg" alt="Pharmadent" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Pharmadent Store</h1>
       <p class="lead">Dental Supply | Creative</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
